kubernetes/apps/frontend-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: retail-prod
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
      - name: nginx-web
        image: umasankar33/5-retail-app-frontend:v21
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: retail-prod
spec:
  type: NodePort # FIX: Change from ClusterIP to NodePort
  ports:
  - port: 80
    targetPort: 80
    #protocol: TCP
    nodePort: 30080 # Optional: Hardcode a specific port between 30000-32767 if desired
  selector:
    app: frontend-service
  #type: ClusterIP # Traefik abstracts this directly to the cluster domain
