kubernetes/apps/frontend-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-platform-ingress
  namespace: retail-prod
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    # Swapped AWS ALB checks for native standard ingress pathing
spec:
  ingressClassName: traefik # Points directly to k3s default ingress handler
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
